--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="phone">Phone</string>
     <string name="name">Name</string>
     <string name="open_add">Add</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
