--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,16 @@
     <string name="tab_text_3">Groups</string>
     <string name="add_chat">Add Chat</string>
     <string name="save_phone_contact">Save Contact</string>
-    <string name="phone">Phone</string>
     <string name="name">Name</string>
     <string name="open_add">Add</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="phone">Phone</string>
+    <string name="generateOTP">Generate OTP</string>
+    <string name="OTP">OTP</string>
+    <string name="verifyOTP">Verify OTP</string>
+    <string name="home">Home</string>
+    <string name="logout">Logout</string>
+    <string name="goToHome">Home</string>
+    <string name="changeLanguage">Language</string>
+    <string name="mode">Dark Mode</string>
 </resources>
