--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="tab_text_1">carbon</string>
-    <string name="tab_text_2">الحالات</string>
+    <string name="tab_text_1">المحادثات</string>
+    <string name="tab_text_2">القصص</string>
     <string name="tab_text_3">المجموعات</string>
     <string name="add_chat">إضافة محادثة</string>
-    <string name="save_phone_contact">حفظ الواجهة</string>
+    <string name="save_phone_contact">حفظ جهة الأتصال</string>
     <string name="name">الإسم</string>
     <string name="open_add">إضافة</string>
-    <string name="app_name">شاتي</string>
+    <string name="app_name">كاربون</string>
     <string name="phone">الهاتف</string>
     <string name="generateOTP">انشئ رمز OTP</string>
     <string name="OTP">OTP</string>
@@ -17,4 +17,8 @@
     <string name="goToHome">العوده الي المنزل</string>
     <string name="changeLanguage">تغيير اللغه</string>
     <string name="mode">الوضع الداكن</string>
+    <string name="app_lock">قفل التطبيق</string>
+    <string name="sign_out">تسجيل الدخول</string>
+    <string name="cancel">الغاء</string>
+    <string name="use_fingerprint">استخدم البصمة</string>
 </resources>
