--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="goToHome">Home</string>
     <string name="changeLanguage">Language</string>
     <string name="mode">Dark Mode</string>
-    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_maps" translatable="false">MapsActivity</string>
     <string name="app_lock">App Lock</string>
     <string name="sign_out">sign out</string>
     <string name="cancel">Cancel</string>
