--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="sign_out">sign out</string>
     <string name="cancel">Cancel</string>
     <string name="use_fingerprint">Use fingerprint</string>
+    <string name="settings">Settings</string>
 </resources>
