--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="cancel">Cancel</string>
     <string name="use_fingerprint">Use fingerprint</string>
     <string name="settings">Settings</string>
+    <string name="verify_otp">Verify OTP</string>
+    <string name="verification_code">Verification code</string>
+    <string name="send_message">Send Message</string>
 </resources>
