--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -25,4 +25,5 @@
     <string name="verify_otp">تأكيد OTP</string>
     <string name="verification_code">رقم التأكيد</string>
     <string name="send_message">أرسل رسالة</string>
+    <string name="unlock">الغاء القفل</string>
 </resources>
