--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="verify_otp">Verify OTP</string>
     <string name="verification_code">Verification code</string>
     <string name="send_message">Send Message</string>
+    <string name="unlock">Unlock</string>
 </resources>
